--- a/CookPopularControl/Backcolors/DefaultPopularColor.xaml
+++ b/CookPopularControl/Backcolors/DefaultPopularColor.xaml
@@ -1,14 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="PrimaryColorTheme" Color="	#1E90FF"/>
-    <SolidColorBrush x:Key="AssistantColorTheme" Color="#FF5722"/>
-    <SolidColorBrush x:Key="PrimaryForeground" Color="#4A4A4A"/>
-    <SolidColorBrush x:Key="AssistantForeground" Color="#FFFFFF"/>
+    <Color x:Key="PrimaryThemeColor">#1E90FF</Color>
+    <Color x:Key="AssistantThemeColor">#FF5722</Color>
+    <Color x:Key="PrimaryForegroundColor">#4A4A4A</Color>
+    <Color x:Key="AssistantForegroundColor">#FFFFFF</Color>
+    <SolidColorBrush x:Key="PrimaryColorTheme" Color="{StaticResource PrimaryThemeColor}"/>
+    <SolidColorBrush x:Key="AssistantColorTheme" Color="{StaticResource AssistantThemeColor}"/>
+    <SolidColorBrush x:Key="PrimaryForeground" Color="{StaticResource PrimaryForegroundColor}"/>
+    <SolidColorBrush x:Key="AssistantForeground" Color="{StaticResource AssistantForegroundColor}"/>
 
     <!--#FF9C8844-->
-    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="#55AAFF"/>
-    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="#4169E1"/>
+    <Color x:Key="ButtonBaseMouseOverColor">#55AAFF</Color>
+    <Color x:Key="ButtonBasePressColor">#4169E1</Color>
+    <SolidColorBrush x:Key="ButtonBaseMouseOverBackground" Color="{StaticResource ButtonBaseMouseOverColor}"/>
+    <SolidColorBrush x:Key="ButtonBasePressBackground" Color="{StaticResource ButtonBasePressColor}"/>
     <SolidColorBrush x:Key="BorderBrushColor" Color="#8B008B"/>
 
     <SolidColorBrush x:Key="FieldBorderBrush" Color="{x:Static SystemColors.ActiveBorderColor}"/>
