--- a/CookPopularControl/Themes/MenuStyle.xaml
+++ b/CookPopularControl/Themes/MenuStyle.xaml
@@ -1,28 +1,30 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
+                    xmlns:panel="clr-namespace:CookPopularControl.Controls.Panels"
+                    xmlns:menu="clr-namespace:CookPopularControl.Controls.Menus"
                     xmlns:ripple="clr-namespace:CookPopularControl.Controls.Ripple"
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
                     xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters">
 
-    <ContextMenu x:Key="DefaultContentMenu" Foreground="{DynamicResource PrimaryForeground}">
+    <ContextMenu x:Key="DefaultContentMenu">
         <MenuItem Command="Cut">
             <MenuItem.Icon>
-                <Path Data="{DynamicResource CutGeometry}" Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ContextMenu},Path=Foreground}" Stretch="Uniform"/>
+                <Path Data="{DynamicResource CutGeometry}" Fill="{DynamicResource PrimaryForeground}" Stretch="Uniform"/>
             </MenuItem.Icon>
         </MenuItem>
         <MenuItem Command="Copy">
             <MenuItem.Icon>
-                <Path Data="{DynamicResource CopyGeometry}" Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ContextMenu},Path=Foreground}" Stretch="Uniform"/>
+                <Path Data="{DynamicResource CopyGeometry}" Fill="{DynamicResource PrimaryForeground}" Stretch="Uniform"/>
             </MenuItem.Icon>
         </MenuItem>
         <MenuItem Command="Paste">
             <MenuItem.Icon>
-                <Path Data="{DynamicResource PasteGeometry}" Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ContextMenu},Path=Foreground}" Stretch="Uniform"/>
+                <Path Data="{DynamicResource PasteGeometry}" Fill="{DynamicResource PrimaryForeground}" Stretch="Uniform"/>
             </MenuItem.Icon>
         </MenuItem>
         <MenuItem Command="SelectAll">
             <MenuItem.Icon>
-                <Path Data="{DynamicResource SelectAllGeometry}" Fill="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ContextMenu},Path=Foreground}" Stretch="Uniform"/>
+                <Path Data="{DynamicResource SelectAllGeometry}" Fill="{DynamicResource PrimaryForeground}" Stretch="Uniform"/>
             </MenuItem.Icon>
         </MenuItem>
     </ContextMenu>
@@ -31,6 +33,7 @@
         <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=MenuBase},Path=Foreground}" />
         <Setter Property="Padding" Value="24,0" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="ripple:RippleAssist.Feedback" Value="#FFFFFF" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type MenuItem}">
@@ -43,7 +46,7 @@
                                 Background="{TemplateBinding Background}" SnapsToDevicePixels="True"/>
                         <ripple:Ripple Background="Transparent" Focusable="False"
                                        HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch"
-                                       Feedback="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type MenuBase}},Path=(ripple:RippleAssist.Feedback)}">
+                                       Feedback="{TemplateBinding ripple:RippleAssist.Feedback}">
                             <Grid Height="{TemplateBinding Height}" Background="Transparent">
                                 <Grid VerticalAlignment="Center" Background="Transparent" Margin="{TemplateBinding Padding}">
                                     <Grid.ColumnDefinitions>
@@ -53,7 +56,6 @@
                                     </Grid.ColumnDefinitions>
                                     <Grid x:Name="IconWrapper" Visibility="Visible" Width="40">
                                         <ContentPresenter x:Name="Icon" Height="16" Width="16"
-                                                          TextElement.Foreground="{TemplateBinding Foreground}"
                                                           Content="{TemplateBinding Icon}" ContentSource="Icon"
                                                           HorizontalAlignment="Left" VerticalAlignment="Center"
                                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
@@ -99,7 +101,7 @@
                         <Popup x:Name="PART_Popup" IsOpen="{Binding IsSubmenuOpen, RelativeSource={RelativeSource TemplatedParent}}"
                                Placement="Bottom" PopupAnimation="Slide" AllowsTransparency="True"
                                CacheMode="{DynamicResource DefaultBitmapCache}"  
-                               Focusable="False" VerticalOffset="-16">
+                               Focusable="False" VerticalOffset="0">
                             <Border x:Name="SubMenuBorder" CornerRadius="2" Effect="{DynamicResource CustomShadowDepth1}"
                                     Background="{Binding Path=Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=MenuBase}}">
                                 <Border Background="Transparent">
@@ -177,7 +179,7 @@
                             <Setter Property="Visibility" TargetName="IconWrapper" Value="Collapsed"/>
                         </Trigger>
                         <Trigger Property="IsHighlighted" Value="True">
-                            <Setter TargetName="BackgroundRoot" Property="Opacity" Value="0.13"/>
+                            <Setter TargetName="BackgroundRoot" Property="Opacity" Value="0.53"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value=".56"/>
@@ -196,7 +198,6 @@
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="UseLayoutRounding" Value="True" />
-        <Setter Property="ripple:RippleAssist.Feedback" Value="#FFFFFF" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type MenuBase}">
@@ -221,12 +222,12 @@
                             <Border Background="{TemplateBinding Background}" Margin="5" CornerRadius="2" Effect="{DynamicResource CustomShadowDepth1}"/>
                             <Border Margin="5" Background="Transparent">
                                 <ScrollViewer Style="{DynamicResource {ComponentResourceKey ResourceId=MenuScrollViewer, TypeInTargetAssembly={x:Type FrameworkElement}}}">
-                                    <pc:SimpleGrid RenderOptions.ClearTypeHint="Enabled" Margin="0,16">
+                                    <panel:SimpleGrid RenderOptions.ClearTypeHint="Enabled" Margin="0,16">
                                         <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Cycle"
                                                         KeyboardNavigation.TabNavigation="Cycle"
                                                         Grid.IsSharedSizeScope="True"
                                                         SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                                    </pc:SimpleGrid>
+                                    </panel:SimpleGrid>
                                 </ScrollViewer>
                             </Border>
                         </Grid>
@@ -236,4 +237,77 @@
         </Setter>
     </Style>
 
+    <Style x:Key="CircleMenuStyle" TargetType="{x:Type menu:CircleMenu}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type menu:CircleMenu}">
+                    <ControlTemplate.Resources>
+                        <Storyboard x:Key="VisibleStoryboard">
+                            <ObjectAnimationUsingKeyFrames Duration="0:0:0.5" Storyboard.TargetName="MenuItems" Storyboard.TargetProperty="Visibility">
+                                <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="{x:Static Visibility.Visible}"/>
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                        <Storyboard x:Key="CollapsedStoryboard">
+                            <ObjectAnimationUsingKeyFrames Duration="0:0:0.5" Storyboard.TargetName="MenuItems" Storyboard.TargetProperty="Visibility">
+                                <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="{x:Static Visibility.Collapsed}"/>
+                            </ObjectAnimationUsingKeyFrames>
+                        </Storyboard>
+                        <Storyboard x:Key="TransformToStoryboard" Duration="0:0:0.5">
+                            <DoubleAnimation To="0" Storyboard.TargetName="Rotate" Storyboard.TargetProperty="Angle"/>
+                            <DoubleAnimation To="1.6" Storyboard.TargetName="Scale" Storyboard.TargetProperty="ScaleX"/>
+                            <DoubleAnimation To="1.6" Storyboard.TargetName="Scale" Storyboard.TargetProperty="ScaleY"/>
+                        </Storyboard>
+                        <Storyboard x:Key="TransformFromStoryboard" Duration="0:0:0.5">
+                            <DoubleAnimation To="-100" Storyboard.TargetName="Rotate" Storyboard.TargetProperty="Angle"/>
+                            <DoubleAnimation To="0" Storyboard.TargetName="Scale" Storyboard.TargetProperty="ScaleX"/>
+                            <DoubleAnimation To="0" Storyboard.TargetName="Scale" Storyboard.TargetProperty="ScaleY"/>
+                        </Storyboard>
+                    </ControlTemplate.Resources>
+                    <panel:SimpleGrid ClipToBounds="False" Background="{TemplateBinding Background}">
+                        <ToggleButton x:Name="PART_LaunchButton" Width="52" Height="52" 
+                                      Foreground="{TemplateBinding Foreground}" Background="Transparent"
+                                      attached:FrameworkElementBaseAttached.IconWidth="50"
+                                      attached:FrameworkElementBaseAttached.IconHeight="50"
+                                      attached:FrameworkElementBaseAttached.CornerRadius="50"
+                                      attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource PlusGeometry}"
+                                      Style="{DynamicResource TransparentIconToggleButtonStyle}"/>
+                        <panel:ArcPanel x:Name="MenuItems" IsItemsHost="True" SnapsToDevicePixels="True"
+                                        Radius="{TemplateBinding Radius}" ArcAngle="{TemplateBinding ArcAngle}" 
+                                        IsItemRotate="{TemplateBinding IsItemRotate}" RenderTransformOrigin="0.5,0.5">
+                            <panel:ArcPanel.RenderTransform>
+                                <TransformGroup>
+                                    <RotateTransform Angle="100" x:Name="Rotate"/>
+                                    <ScaleTransform ScaleX="0" ScaleY="0" x:Name="Scale"/>
+                                </TransformGroup>
+                            </panel:ArcPanel.RenderTransform>
+                        </panel:ArcPanel>
+                    </panel:SimpleGrid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True" SourceName="PART_LaunchButton">
+                            <Setter Property="attached:FrameworkElementBaseAttached.IconGeometry" Value="{DynamicResource MinusGeometry}" TargetName="PART_LaunchButton"/>
+                            <Trigger.EnterActions>
+                                <BeginStoryboard x:Name="VisibleStoryboard" Storyboard="{StaticResource VisibleStoryboard}"/>
+                                <BeginStoryboard x:Name="TransformToStoryboard" Storyboard="{StaticResource TransformToStoryboard}"/>
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+                                <RemoveStoryboard BeginStoryboardName="VisibleStoryboard"/>
+                                <RemoveStoryboard BeginStoryboardName="TransformToStoryboard"/>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="False" SourceName="PART_LaunchButton">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard x:Name="CollapsedStoryboard" Storyboard="{StaticResource CollapsedStoryboard}"/>
+                                <BeginStoryboard x:Name="TransformFromStoryboard" Storyboard="{StaticResource TransformFromStoryboard}"/>
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+                                <RemoveStoryboard BeginStoryboardName="CollapsedStoryboard"/>
+                                <RemoveStoryboard BeginStoryboardName="TransformFromStoryboard"/>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
 </ResourceDictionary>
