--- a/TestDemo/MainWindow.xaml
+++ b/TestDemo/MainWindow.xaml
@@ -35,7 +35,8 @@
         <!--<local:QRCodeControlDemo />-->
         <!--<local:GridDemo />-->
         <!--<local:DataGridDemo />-->
-        <local:DateDemo />
+        <!--<local:DateDemo />-->
+        <local:MenuDemo />
     </Grid>
 
 
