--- a/CookPopularControl/Backcolors/DefaultPopularColor.xaml
+++ b/CookPopularControl/Backcolors/DefaultPopularColor.xaml
@@ -26,10 +26,10 @@
     <Color x:Key="DataGridRowMouseOverColor">#55AAFF</Color>
     <Color x:Key="DataGridRowMouseOverSelected">#4169E1</Color>
 
-    <!--<Color x:Key="BlockColor">#664A4A4A</Color>-->
+    <Color x:Key="BlockColor">#554A4A4A</Color>
     <!--<Color x:Key="UnEnabledColor">#D3D3D3</Color>-->
     <!--<Color x:Key="DefaultBackgroundColor">#FFFFFF</Color>-->
-    <SolidColorBrush x:Key="BlockColor" Color="#664A4A4A"/>
+    <SolidColorBrush x:Key="BlockBrush" Color="{StaticResource BlockColor}"/>
     <SolidColorBrush x:Key="UnEnabledColor" Color="#D3D3D3"/>
     <SolidColorBrush x:Key="DefaultBackground" Color="#FFFFFF"/>
     
