--- a/CookPopularControl/Themes/ChromeWindowStyle.xaml
+++ b/CookPopularControl/Themes/ChromeWindowStyle.xaml
@@ -25,7 +25,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="{DynamicResource BlockColor}" TargetName="border"/>
+                            <Setter Property="Background" Value="{DynamicResource BlockBrush}" TargetName="border"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
